--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <meta name="apple-mobile-web-app-title" content="iot_device_pairing">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>iot_device_pairing</title>
+  <title>MDU1 Field Tech Tool</title>
   <link rel="manifest" href="manifest.json">
   <script src="https://cdn.jsdelivr.net/npm/jsqr@1.3.1/dist/jsQR.min.js"></script>
 </head>
@@ -32,7 +32,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '4139013301';
+    var serviceWorkerVersion = '1573442229';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
